--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zxx">
+<html>
 
 <head>
     <meta charset="utf-8" />
@@ -25,6 +25,23 @@
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
     <link href="./assets/css/themify-icons.css" rel="stylesheet">
+
+    <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false);
+        function hideURLbar(){ window.scrollTo(0,1); } </script>
+    <!-- Meta tag Keywords -->
+    <!-- css files -->
+    <link rel="stylesheet" href="assets/css1/style.css" type="text/css" media="all" /> <!-- Style-CSS -->
+    <link rel="stylesheet" href="assets/css1/font-awesome.css"> <!-- Font-Awesome-Icons-CSS -->
+    <!-- //css files -->
+    <!-- web-fonts -->
+    <link href="//fonts.googleapis.com/css?family=Philosopher:400,400i,700,700i&amp;subset=cyrillic,cyrillic-ext,vietnamese"
+        rel="stylesheet">
+    <!-- //web-fonts -->
+
+    <!-- js -->
+    <script type="text/javascript" src="assets/js1/jquery-2.1.4.min.js"></script>
+    <script src="assets/js1/jquery.vide.min.js"></script>
+    <!-- //js -->
 
 </head>
 
